# aivalink

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  alembic.ini  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  logging_config.py  main.py
app/api/: agents.py  asr_configs.py  auth.py  characters.py  conversations.py  deps.py  files.py  instances.py  llm_configs.py  tts_configs.py  users.py
app/core/: exceptions.py  security.py
app/engine/: config_loader.py  emotion.py  factory.py  pipeline.py  sentence_splitter.py
app/instance_manager/: manager.py  redis_store.py
app/mcp/: client.py  server.py
app/models/: __init__.py  asr_config.py  base.py  character.py  conversation_log.py  file_upload.py  instance.py  llm_config.py  oauth_token.py  tts_config.py  user.py
app/orchestrator/: tool_executor.py
app/schemas/: agent.py  asr_config.py  auth.py  character.py  conversation.py  file_upload.py  instance.py  llm_config.py  tts_config.py  user.py
app/utils/: crypto.py
app/ws/: handler.py
apps/desktop/: package.json  pet-renderer.html  (+1 more)
characters/: kiara.yaml
docs/: DEVELOPMENT_LOG.md  PROJECT_STATUS.md  architecture.md  functional-spec.md  user-flow.md
infra/: kind-config.yaml
scripts/: local-deploy.sh
services/ai-service/: main.py  pyproject.toml  requirements.txt
services/ai-service/.omc/state/: idle-notif-cooldown.json
services/ai-service/routers/: chat.py  embedding.py  emotion.py  ooc.py  pii.py  stt.py  tts.py
services/ai-service/tests/: test_core_routers.py  test_docker_compose_stack.py  test_pii_router.py
services/platform/: Dockerfile  pyproject.toml  requirements.txt
services/platform/alembic/: env.py
services/platform/alembic/versions/: 001_initial.py  002_aiva_tables.py  003_oauth_fields.py  004_agent_tables.py  005_energy_packs.py  006_performance_indexes.py  007_row_level_security.py
services/platform/app/: config.py  main.py
services/platform/app/api/: deps.py
services/platform/app/api/routes/: agents.py  auth.py  billing.py  characters.py  documents.py  energy.py  instances.py  memories.py  notifications.py  oauth.py  personas.py  tts.py  vtuber_proxy.py
services/platform/app/db/: database.py  models.py  pool.py  rls.py
services/platform/app/orchestrator/: base.py  docker.py  k8s.py
services/platform/app/services/: embedding.py  energy.py  payment.py  proactive.py  rag.py  scheduler.py  usage.py
services/platform/tests/: conftest.py  test_auth.py  test_billing.py  test_embedding.py  test_notifications.py  test_personas.py  test_rag.py  test_usage.py
tests/: conftest.py  test_asr_configs.py  test_auth.py  test_characters.py  test_config_loader.py  test_conversations.py  test_emotion.py  test_engine.py  test_files.py  test_health.py  test_instances.py  test_llm_configs.py  test_mcp_client.py  test_mcp_server.py  test_orchestrator.py  test_pipeline.py  test_tts_configs.py  test_users.py  test_websocket.py
(+122 files in other folders)
